
SVN
-------------------------------

XML:   Resolved issue CASTOR-1181 using contribution from Anton Spaans [aspaans@smarttime.com]
       Fixed problem with code generation for attributes that are restricted.
       Details: http://jira.codehaus.org/browse/CASTOR-1181
       (Edward - 20061008)

XML:   Resolved issue CASTOR-599 using contribution from Edward Kuns [edward.kuns@aspect.com]
       UnmarshalHandler doesn't chain exception
       Details: http://jira.codehaus.org/browse/CASTOR-599
       (Edward - 20061007)

XML:   Resolved issue CASTOR-1613 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Finish @throws javadoc
       Details: http://jira.codehaus.org/browse/CASTOR-1613
       (Edward - 20061007)

XML:   Resolved issue CASTOR-716 using contribution from Edward Kuns [edward.kuns@aspect.com]
       SourceGenerator doesn't correctly generate the .equals() method for base64binary
       Details: http://jira.codehaus.org/browse/CASTOR-716
       (Edward - 20061007)

XML:   Resolved issue CASTOR-1609 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Implement equals() for AnyNode
       Details: http://jira.codehaus.org/browse/CASTOR-1609
       (Edward - 20061006)

XML:   Resolved issue CASTOR-1417 using contribution from Edward Kuns [edward.kuns@aspect.com]
       hashCode() generation
       Details: http://jira.codehaus.org/browse/CASTOR-1417
       (Edward - 20061006)

XML:   Resolved issue CASTOR-1027 using contribution from Edward Kuns [edward.kuns@aspect.com]
       demo example of SourceGenerator does not build
       Details: http://jira.codehaus.org/browse/CASTOR-1027
       (Edward - 20061005)

XML:   Resolved issue CASTOR-1608 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Split "main" out of SourceGenerator.java
       Details: http://jira.codehaus.org/browse/CASTOR-1608
       (Edward - 20061005)
